--- a/index.html
+++ b/index.html
@@ -134,14 +134,19 @@
                                 placeholder="Your Name *">
                         </div>
                         <div>
-                            <input type="email" name="email" required
+                            <input type="email" name="_replyto" required
                                 class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all"
                                 placeholder="Email Address *">
                         </div>
                         <div>
-                            <select name="service"
+                            <input type="tel" name="phone" required
+                                class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all"
+                                placeholder="Phone Number *">
+                        </div>
+                        <div>
+                            <select name="service" required
                                 class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all">
-                                <option value="">Select Service</option>
+                                <option value="">Select Service *</option>
                                 <option value="social-media">Social Media Ads</option>
                                 <option value="google-ads">Google Ads & PPC</option>
                                 <option value="seo">SEO/SEM</option>
@@ -382,22 +387,31 @@
                             </div>
                             <div>
                                 <label class="block text-sm font-semibold text-gray-700 mb-2">Email Address *</label>
-                                <input type="email" name="email" required
-                                    class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-all transition-all"
+                                <input type="email" name="_replyto" required
+                                    class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all"
                                     placeholder="john@example.com">
                             </div>
                         </div>
 
-                        <div>
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Company Name</label>
-                            <input type="text" name="company"
-                                class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all"
-                                placeholder="Your Company Ltd.">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                            <div>
+                                <label class="block text-sm font-semibold text-gray-700 mb-2">Phone Number *</label>
+                                <input type="tel" name="phone" required
+                                    class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all"
+                                    placeholder="+971 50 123 4567">
+                            </div>
+                            <div>
+                                <label class="block text-sm font-semibold text-gray-700 mb-2">Company Name</label>
+                                <input type="text" name="company"
+                                    class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all"
+                                    placeholder="Your Company Ltd.">
+                            </div>
                         </div>
 
                         <div>
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Service Interested In</label>
-                            <select name="service"
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">Service Interested In
+                                *</label>
+                            <select name="service" required
                                 class="w-full px-5 py-4 rounded-xl bg-gray-50 border-2 border-gray-200 focus:border-primary focus:bg-white outline-none transition-all">
                                 <option value="">Select a service</option>
                                 <option value="social-media">Social Media Ads</option>
