Add SEO meta tags and favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0aftermath | Digital Marketing & AI Automation Agency</title>
+    <!-- SEO Meta Tags -->
+    <title>0aftermath | AI Automation & Digital Marketing Agency</title>
+    <meta name="description"
+        content="Scale your business with 0aftermath. We specialize in AI Automation, Social Media Ads, SEO, and Web Development. Data-driven results for modern businesses.">
+    <meta name="keywords"
+        content="AI Automation, Digital Marketing, SEO, Web Development, Social Media Ads, 0aftermath">
+    <meta name="author" content="0aftermath">
+
+    <!-- Open Graph / Facebook / WhatsApp Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://0aftermath.com/">
+    <meta property="og:title" content="0aftermath | AI Automation & Digital Marketing">
+    <meta property="og:description"
+        content="Scale your business with AI-powered marketing strategies. Get a free consultation today.">
+    <meta property="og:image" content="https://0aftermath.com/logo.png">
+
+    <!-- Twitter Card -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://0aftermath.com/">
+    <meta property="twitter:title" content="0aftermath | AI Automation & Digital Marketing">
+    <meta property="twitter:description"
+        content="Scale your business with AI-powered marketing strategies. Get a free consultation today.">
+    <meta property="twitter:image" content="https://0aftermath.com/logo.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="logo.png">
     <meta name="description"
         content="Transform your digital presence with 0aftermath. Expert performance marketing, SEO, website development, and AI-powered automation services.">
 
