--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords"
         content="AI Automation, Digital Marketing, SEO, Web Development, Social Media Ads, 0aftermath">
     <meta name="author" content="0aftermath">
+    <meta name="google-site-verification" content="google9ae1390d108fe403" />
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
