Add social media preview image and update meta tags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="0aftermath | AI Automation & Digital Marketing">
     <meta property="og:description"
         content="Scale your business with AI-powered marketing strategies. Get a free consultation today.">
-    <meta property="og:image" content="https://0aftermath.com/logo.png">
+    <meta property="og:image" content="https://0aftermath.com/social-preview.png">
 
     <!-- Twitter Card -->
     <meta property="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
     <meta property="twitter:title" content="0aftermath | AI Automation & Digital Marketing">
     <meta property="twitter:description"
         content="Scale your business with AI-powered marketing strategies. Get a free consultation today.">
-    <meta property="twitter:image" content="https://0aftermath.com/logo.png">
+    <meta property="twitter:image" content="https://0aftermath.com/social-preview.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo.png">
