feat: Integrate new brand identity (Logo Concept 2) and SEO schema updates

--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
       "name": "0aftermath",
       "url": "https://0aftermath.com",
       "logo": "https://0aftermath.com/logo.png",
-      "description": "AI-Powered Digital Marketing & Automation Agency for Small Businesses.",
+      "description": "AI-Powered Digital Marketing & Automation Agency. Specialized in SEO, PPC, and Sales Automation for small businesses.",
       "sameAs": [
         "https://linkedin.com/company/0aftermath",
         "https://twitter.com/0aftermath"
       ],
       "contactPoint": {
         "@type": "ContactPoint",
+        "telephone": "+971-50-000-0000",
         "contactType": "customer service",
-        "email": "hello@0aftermath.com"
+        "areaServed": "AE",
+        "availableLanguage": "en"
       }
     }
     </script>
@@ -99,7 +101,7 @@
                 <a href="#insights" class="hover:text-primary transition-colors">Insights</a>
                 <a href="#contact" class="btn-premium text-white px-6 py-2.5 rounded-full shadow-lg">Get Started</a>
             </nav>
-            <button class="lg:hidden text-text-main p-2">
+            <button class="lg:hidden text-text-main p-2" aria-label="Open Menu">
                 <i data-lucide="menu" class="w-8 h-8"></i>
             </button>
         </div>
@@ -402,7 +404,7 @@
         <div class="container mx-auto px-6">
             <div class="grid md:grid-cols-4 gap-12 mb-16">
                 <div class="col-span-1 md:col-span-2">
-                    <img src="logo.png" alt="0aftermath" class="h-16 mb-8 logo-main">
+                    <img src="logo.png" alt="0aftermath - AI Marketing Agency" class="h-16 mb-8 logo-main">
                     <p class="text-text-muted max-w-sm">We're on a mission to simplify digital marketing for small
                         businesses through the power of AI automation and performance engineering.</p>
                 </div>
