--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <a href="#insights" class="hover:text-primary transition-colors">Insights</a>
                 <a href="#contact" class="btn-premium text-white px-6 py-2.5 rounded-full shadow-lg">Get Started</a>
             </nav>
-            <button class="lg:hidden text-text-main p-2" aria-label="Open Menu">
+            <button class="lg:hidden text-text-main p-2" aria-label="Open Mobile Menu">
                 <i data-lucide="menu" class="w-8 h-8"></i>
             </button>
         </div>
