fix: Lead Magnet contrast and Tailwind color configuration

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: '#7C3AED',
+                        primary: '#4F46E5',
                         secondary: '#06B6D4',
-                        accent: '#F97316',
+                        accent: '#F59E0B',
+                        'text-main': '#111827',
+                        'text-muted': '#4B5563',
+                        'bg-alt': '#F9FAFB',
                     },
                     fontFamily: {
                         sans: ['Inter', 'sans-serif'],
