fix: Hardcode Lead Magnet background and add CSS fallback for visibility

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <section class="py-20">
         <div class="container mx-auto px-6">
             <div
-                class="bg-text-main rounded-[3rem] p-12 md:p-20 text-white relative overflow-hidden text-center reveal">
+                class="bg-[#111827] rounded-[3rem] p-12 md:p-20 text-white relative overflow-hidden text-center reveal">
                 <div class="absolute inset-0 opacity-10">
                     <div class="absolute -top-20 -left-20 w-80 h-80 bg-accent rounded-full blur-[100px]"></div>
                     <div class="absolute -bottom-20 -right-20 w-80 h-80 bg-primary rounded-full blur-[100px]"></div>
