feat: New 6-page Digital Marketing Road Map and form redirection fix

--- a/index.html
+++ b/index.html
@@ -385,16 +385,15 @@
                 </div>
 
                 <div class="relative z-10 max-w-3xl mx-auto">
-                    <i data-lucide="gift" class="w-16 h-16 text-accent mx-auto mb-8"></i>
-                    <h2 class="text-4xl md:text-5xl font-bold mb-6">Download the "SEO Mastery" Blueprint</h2>
-                    <p class="text-xl text-white/70 mb-10 leading-relaxed">The exact checklist we use to deliver Top 3
-                        rankings for our clients. No spam, just value.</p>
+                    <h2 class="text-4xl md:text-5xl font-bold mb-6">Download the "Digital Marketing" Road Map</h2>
+                    <p class="text-xl text-white/70 mb-10 leading-relaxed">A comprehensive 6-page guide covering
+                        Performance Marketing, Social Media, Website Strategy, and AI Automation.</p>
 
-                    <form class="flex flex-col md:flex-row gap-4 max-w-lg mx-auto">
-                        <input type="email" placeholder="Email Address"
+                    <form id="lead-magnet-form" class="flex flex-col md:flex-row gap-4 max-w-lg mx-auto">
+                        <input type="email" id="lead-email" required placeholder="Email Address"
                             class="flex-1 px-6 py-4 rounded-full bg-white/10 border border-white/20 text-white placeholder-white/40 outline-none focus:border-accent">
                         <button type="submit" class="btn-accent text-text-main font-bold px-10 py-4 rounded-full">Get My
-                            PDF</button>
+                            Road Map</button>
                     </form>
                     <p class="text-xs text-white/40 mt-6">Joined by 2,000+ marketing professionals.</p>
                 </div>
