Add Google Analytics and Google Tag Manager tracking codes + LinkedIn link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" class="scroll-smooth">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NHCJPPJJ');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO Meta Tags -->
@@ -31,6 +41,16 @@
     <link rel="icon" type="image/png" href="logo.png">
     <meta name="description"
         content="Transform your digital presence with 0aftermath. Expert performance marketing, SEO, website development, and AI-powered automation services.">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KWKDKSYLC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-5KWKDKSYLC');
+    </script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -294,6 +314,10 @@
 </head>
 
 <body class="antialiased">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NHCJPPJJ" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Header -->
     <header id="header" class="fixed w-full top-0 z-50 transition-all duration-300">
@@ -1060,8 +1084,9 @@
             <div class="pt-8 border-t border-gray-200 flex flex-col md:flex-row justify-between items-center gap-6">
                 <p class="text-sm text-text-muted">© 2026 0aftermath. Built for Performance.</p>
                 <div class="flex gap-6">
-                    <a href="#" class="text-text-muted hover:text-primary transition-colors"><i data-lucide="linkedin"
-                            class="w-5 h-5"></i></a>
+                    <a href="https://www.linkedin.com/company/0aftermath/?viewAsMember=true" target="_blank"
+                        rel="noopener noreferrer" class="text-text-muted hover:text-primary transition-colors"><i
+                            data-lucide="linkedin" class="w-5 h-5"></i></a>
                     <a href="#" class="text-text-muted hover:text-secondary transition-colors"><i data-lucide="twitter"
                             class="w-5 h-5"></i></a>
                     <a href="#" class="text-text-muted hover:text-accent transition-colors"><i data-lucide="instagram"
