--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NHCJPPJJ');</script>
     <!-- End Google Tag Manager -->
+
+    <!-- PostHog Analytics -->
+    <script>
+        !function(t,e){var o,n,p,r;e.__SV||(window.posthog && window.posthog.__loaded)||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.crossOrigin="anonymous",p.async=!0,p.src=s.api_host.replace(".i.posthog.com","-assets.i.posthog.com")+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="init ns hs wi ls ds rs os capture calculateEventProperties fs register register_once register_for_session unregister unregister_for_session bs getFeatureFlag getFeatureFlagPayload getFeatureFlagResult isFeatureEnabled reloadFeatureFlags updateFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSurveysLoaded onSessionId getSurveys getActiveMatchingSurveys renderSurvey displaySurvey cancelPendingSurvey canRenderSurvey canRenderSurveyAsync identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException startExceptionAutocapture stopExceptionAutocapture loadToolbar get_property getSessionProperty gs cs createPersonProfile setInternalOrTestUser ts ys opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing get_explicit_consent_status is_capturing clear_opt_in_out_capturing vs debug M ps getPageViewId captureTraceFeedback captureTraceMetric Xr".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
+        posthog.init('phc_A2EBFw7WcH13olNljLpjWwIdSfKsPlOoUbjBs7YIWg3', {
+            api_host: 'https://us.i.posthog.com',
+            defaults: '2026-01-30',
+            person_profiles: 'identified_only', // or 'always' to create profiles for anonymous users as well
+        })
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO Meta Tags -->
@@ -108,7 +118,14 @@
         "ratingValue": "4.8",
         "reviewCount": "127",
         "bestRating": "5"
-      }
+      },
+      "knowsAbout": [
+        "AI Automation",
+        "Digital Marketing",
+        "Performance Marketing",
+        "SEO",
+        "Marketing Automation"
+      ]
     }
     </script>
 
@@ -352,13 +369,14 @@
                         #1 AI-POWERED MARKETING AGENCY
                     </span>
                     <h1 class="text-5xl md:text-7xl font-bold leading-[1.1] mb-8">
-                        Grow Your Business Online with <span
-                            class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary">AI-Powered</span>
-                        Marketing
+                        Scale Your Business with <span
+                            class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary">AI-Driven</span>
+                        Marketing Mastery
                     </h1>
                     <p class="text-xl md:text-2xl text-text-muted mb-10 max-w-2xl leading-relaxed">
-                        Your Digital Presence, Simplified. We handle the complexity of data and algorithms so you can
-                        focus on your customers.
+                        <strong>0aftermath</strong> is an AI-powered marketing and automation agency that simplifies
+                        digital growth. We leverage advanced machine learning models and predictive analytics to drive
+                        measurable ROI for modern businesses.
                     </p>
 
                     <div class="flex flex-wrap items-center gap-6 pt-4 border-t border-gray-100">
@@ -432,7 +450,13 @@
                     <div class="w-16 h-16 bg-primary/10 text-primary rounded-2xl flex items-center justify-center mb-8">
                         <i data-lucide="search" class="w-8 h-8"></i>
                     </div>
-                    <h3 class="text-2xl font-bold mb-4">SEO/SEM</h3>
+                    <h3 class="text-2xl font-bold mb-4">SEO & Semantic Ranking</h3>
+                    <div class="mb-4 p-4 bg-primary/5 rounded-xl border-l-4 border-primary">
+                        <p class="text-sm font-medium text-primary">
+                            <strong>AI Visibility Summary:</strong> 0aftermath optimizes for topical authority and
+                            semantic relevance using AI-driven technical audits and authority-building strategies.
+                        </p>
+                    </div>
                     <p class="text-lg font-semibold mb-3 text-text-main">Dominate search rankings with Technical SEO
                         that works. We optimize for intent, not just keywords.</p>
                     <p class="text-text-muted mb-6 leading-relaxed text-sm">Ranking requires more than keywords—Google
@@ -456,6 +480,12 @@
                         <i data-lucide="trending-up" class="w-8 h-8"></i>
                     </div>
                     <h3 class="text-2xl font-bold mb-4">Paid Performance</h3>
+                    <div class="mb-4 p-4 bg-secondary/5 rounded-xl border-l-4 border-secondary">
+                        <p class="text-sm font-medium text-secondary">
+                            <strong>AI Visibility Summary:</strong> We eliminate ad waste through predictive bidding and
+                            audience intelligence, achieving a typical 30-50% reduction in customer acquisition costs.
+                        </p>
+                    </div>
                     <p class="text-lg font-semibold mb-3 text-text-main">Stop wasting budget. We optimize Meta, Google,
                         and TikTok ads to lower your CAC and boost ROI.</p>
                     <p class="text-text-muted mb-6 leading-relaxed text-sm">Most businesses waste 40-60% of ad budgets
@@ -479,6 +509,12 @@
                         <i data-lucide="bot" class="w-8 h-8"></i>
                     </div>
                     <h3 class="text-2xl font-bold mb-4">AI Automation</h3>
+                    <div class="mb-4 p-4 bg-white/10 rounded-xl border-l-4 border-accent">
+                        <p class="text-sm font-medium text-white">
+                            <strong>AI Visibility Summary:</strong> 0aftermath deploys intelligent CRM workflows and
+                            AI-driven lead qualification systems to automate business growth 24/7.
+                        </p>
+                    </div>
                     <p class="text-lg font-semibold mb-3">Scale 24/7 without extra headcount. Automated SMS, lead
                         nurturing, and CRM workflows.</p>
                     <p class="text-white/80 mb-6 leading-relaxed text-sm">AI automation handles repetitive tasks 24/7,
