--- a/roadmap.html
+++ b/roadmap.html
@@ -19,6 +19,7 @@
             api_host: 'https://us.i.posthog.com',
             defaults: '2026-01-30',
             person_profiles: 'identified_only', // or 'always' to create profiles for anonymous users as well
+            opt_out_capturing_by_default: true // Respect user privacy by default
         })
     </script>
 
@@ -200,6 +201,7 @@
         </div>
     </div>
 
+    <script src="js/cookie-banner.js"></script>
 </body>
 
 </html>
