--- a/index.html
+++ b/index.html
@@ -370,12 +370,12 @@
                         class="inline-block px-4 py-1.5 rounded-full bg-primary/10 text-primary font-bold text-sm tracking-wide mb-6">
                         #1 AI-POWERED MARKETING AGENCY
                     </span>
-                    <h1 class="text-5xl md:text-7xl font-bold leading-[1.1] mb-8">
+                    <h1 id="hero-headline" class="text-5xl md:text-7xl font-bold leading-[1.1] mb-8">
                         Scale Your Business with <span
                             class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary">AI-Driven</span>
                         Marketing Mastery
                     </h1>
-                    <p class="text-xl md:text-2xl text-text-muted mb-10 max-w-2xl leading-relaxed">
+                    <p id="hero-subtitle" class="text-xl md:text-2xl text-text-muted mb-10 max-w-2xl leading-relaxed">
                         <strong>0aftermath</strong> is an AI-powered marketing and automation agency that simplifies
                         digital growth. We leverage advanced machine learning models and predictive analytics to drive
                         measurable ROI for modern businesses.
@@ -403,8 +403,9 @@
                             class="absolute -top-4 -right-4 bg-accent text-white px-4 py-1 rounded-lg font-bold shadow-lg animate-bounce">
                             FREE AUDIT
                         </div>
-                        <h3 class="text-2xl font-bold mb-2">Get Your Free Marketing Audit</h3>
-                        <p class="text-text-muted mb-8">Ready to scale? Let our AI analyze your current strategy.</p>
+                        <h3 id="form-title" class="text-2xl font-bold mb-2">Get Your Free Marketing Audit</h3>
+                        <p id="form-subtitle" class="text-text-muted mb-8">Ready to scale? Let our AI analyze your
+                            current strategy.</p>
 
                         <form action="https://formspree.io/f/xjknogol" method="POST" class="space-y-4">
                             <div class="grid md:grid-cols-2 gap-4">
@@ -1149,6 +1150,8 @@
         })();
     </script>
     <script src="js/cookie-banner.js"></script>
+    <!-- Personalization Engine -->
+    <script src="js/personalization.js"></script>
 </body>
 
 </html>
