--- a/index.html
+++ b/index.html
@@ -371,14 +371,11 @@
                         #1 AI-POWERED MARKETING AGENCY
                     </span>
                     <h1 id="hero-headline" class="text-5xl md:text-7xl font-bold leading-[1.1] mb-8">
-                        Scale Your Business with <span
-                            class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary">AI-Driven</span>
-                        Marketing Mastery
+                        AI-Powered Marketing & <span
+                            class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary">Automation</span>
                     </h1>
                     <p id="hero-subtitle" class="text-xl md:text-2xl text-text-muted mb-10 max-w-2xl leading-relaxed">
-                        <strong>0aftermath</strong> is an AI-powered marketing and automation agency that simplifies
-                        digital growth. We leverage advanced machine learning models and predictive analytics to drive
-                        measurable ROI for modern businesses.
+                        We help businesses grow using data and automation. Get better results with less waste.
                     </p>
 
                     <div class="flex flex-wrap items-center gap-6 pt-4 border-t border-gray-100">
