--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                 <a href="#services" class="hover:text-primary transition-colors">Services</a>
                 <a href="#case-studies" class="hover:text-primary transition-colors">Case Studies</a>
                 <a href="#insights" class="hover:text-primary transition-colors">Insights</a>
+                <a href="roi-calculator.html" class="hover:text-primary transition-colors">ROI Calculator</a>
                 <a href="#contact" class="btn-premium text-white px-6 py-2.5 rounded-full shadow-lg">Get Started</a>
             </nav>
             <button class="lg:hidden text-text-main p-2" aria-label="Open Mobile Menu">
@@ -1105,6 +1106,8 @@
                     <ul class="space-y-4 text-text-muted">
                         <li><a href="#" class="hover:text-primary transition-colors">Case Studies</a></li>
                         <li><a href="#" class="hover:text-primary transition-colors">Insights</a></li>
+                        <li><a href="roi-calculator.html" class="hover:text-primary transition-colors">ROI
+                                Calculator</a></li>
                         <li><a href="#" class="hover:text-primary transition-colors">Free SEO Checklist</a></li>
                     </ul>
                 </div>
