--- a/roadmap.html
+++ b/roadmap.html
@@ -80,10 +80,10 @@
 <body class="bg-gray-50 text-gray-900">
 
     <div class="no-print fixed top-6 right-6 z-50">
-        <button onclick="window.print()"
-            class="bg-indigo-600 text-white px-6 py-3 rounded-full font-bold shadow-xl hover:scale-105 transition-all">
+        <a href="roadmap_2026.pdf" download
+            class="bg-indigo-600 text-white px-6 py-3 rounded-full font-bold shadow-xl hover:scale-105 transition-all inline-block">
             Download / Print PDF
-        </button>
+        </a>
     </div>
 
     <!-- Page 1: Title -->
